sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:15: error: not found: value i
      i = n - k
      ^AlgCocktailSort1:16: error: not found: value i
      if (plusPetit(i, i+1) == true){
                    ^AlgCocktailSort1:16: error: not found: value i
      if (plusPetit(i, i+1) == true){
                       ^AlgCocktailSort1:17: error: not found: value i
        echange(i,i+1)
                ^AlgCocktailSort1:17: error: not found: value i
        echange(i,i+1)
                  ^